--- a/themes/simplicity/sass/theme/_global.scss
+++ b/themes/simplicity/sass/theme/_global.scss
@@ -40,6 +40,7 @@ h1{
   color: $blue;
   border-bottom: 3px solid $blue;
   margin-bottom: $bottom * 3;
+  height: auto !important;
 }
 
 h2{
